fixtures/vyper/simple/overflow/negative/i248.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-226156424291633194186662080095093570025917938800079226639565593765455331328"
#!           ],
#!           "caller": "0x6970aC8c04712419868D54Fe4e6Ff0b58B872944"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int248) -> int248:
    return witness - 1
